trunk/Archive2/75/1b9ae4093242be/output
main.cpp:10:5: error: static assertion failed: Dimension has to be at least 1
     static_assert(false, "Dimension has to be at least 1");
     ^
main.cpp: In function 'int main()':
main.cpp:28:12: warning: unused variable 'a' [-Wunused-variable]
     Test<> a; // This shouldn't get through the static assert
            ^
main.cpp:29:16: warning: unused variable 'b' [-Wunused-variable]
     Test<1, 2> b; // Passing
                ^
main.cpp:30:13: warning: unused variable 'c' [-Wunused-variable]
     Test<2> c; // Passing
             ^
